--- a/site/styles.css
+++ b/site/styles.css
@@ -1,3 +1,11 @@
+*{
+    outline:none;
+}
+
+html{
+    display: flex;
+    height: 100%;
+}
 body{
     flex-direction: column;
     justify-content: space-between;
@@ -24,12 +32,13 @@ header{
     align-items: flex-start;
 
 }
-#empty{
-    width: 89.85px;
+.empty{
+    width: 130px !important;  
 }
 .logout_block{
     display: flex;
-    justify-content: center;
+    width: 130px;
+    justify-content: flex-end;
 }
 .headername_block{
     display: flex;
@@ -68,6 +77,24 @@ header{
     right: 45px;
     color: #5B1A04;
     font-family: 'Advent Pro', cursive;
+    text-align: right;
+}
+.signup_button{
+    border: none;
+    background-color: rgba(0, 0, 0, 0);
+    cursor: pointer; 
+    margin: 10px;
+    right: 45px;
+    color: #5B1A04;
+    font-family: 'Advent Pro', cursive;
+    font-size: 1.5em;
+    text-align: right;
+}
+.signup_button:hover{
+    color: #FEC63D;
+}
+.signup_button:active{
+    color: #FEC63D;
 }
 
 
@@ -77,6 +104,9 @@ main{
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    box-sizing: border-box;
+    min-height: 100%;
+    padding-bottom: 128px;
 }
 
 .search{
@@ -140,8 +170,7 @@ main{
     align-items: center;
     width: 500px;
     height: 350px;
-    border: #5B1A04;
-    border: dashed;
+    border: 2px dashed  #5B1A04;
     border-radius: 45px;
     margin: 45px;
     background-color: #F9F8F7;
@@ -156,14 +185,14 @@ main{
 .image{
     flex: 1 0 auto;
     height: 70%;
-    width: 99%; 
+    width: 96%; 
     border-radius: 30px;
 }
 .toolbar{
     width: 100%;
     margin: 0 15px 5px 15px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 .ph_info{
     display: flex;
@@ -172,25 +201,31 @@ main{
     flex: 1 0 auto;
 }
 .description{
-    height: 35%;
-    margin: 5px 0 0 0;
-    flex: 1 0 auto;
+    height: 30px;
+    width: 350px;
+    margin: 5px 0 0 5px;
     font-family: 'Advent Pro', cursive;
     font-size: 1em;
     color: #7B5A19;  
+    overflow-y: auto;
+    scroll-behavior: smooth;
+
 }
 .hashtags{
+    margin: 0 0 0 5px;
     font-family: 'Advent Pro', cursive;
     font-size: 0.8em;
     color: #7B5A19;  
 }
 .ph_date{
+    margin: 0 0 0 5px;
     font-family: 'Advent Pro', cursive;
     font-size: 0.7em;
     color: #7B5A19;  
 }
 .tool_button{
     margin: 5px;
+    margin-bottom: 0;
     border: none;
     width: 40px;
     height: 45px;
@@ -199,10 +234,17 @@ main{
 }
 .edit{
     display: flex;
+    justify-content: space-between;
+    margin-bottom: 3px;
+    margin-right: 10px;
 }
 .material-icons.md-36 { font-size: 36px; }
 .material-icons.yellow1{
     color: #FEC63D;
+    margin-bottom: 10px;
+}
+.material-icons.md-36.blue{
+    color: #8cc3c9;
 }
 .material-icons.red1{
     color: #5B1A04;
@@ -235,7 +277,7 @@ footer{
     display: flex;
     justify-content: space-between;
     background-color: #EFEBE2;
-    bottom: 0;
+    margin-top: -128px;
     width: 100%;
     height: 128px;
 }
@@ -279,14 +321,18 @@ footer{
     }
     .description{
         font-size: 0.8em;
+        margin: 1px 0 0 5px;
+        width: 195px;
     }
     .hashtags{
         font-size: 0.6em;
     }
-    .date{
+    .ph_date{
         font-size: 0.4em;
     }
-
+    .edit{
+        margin-right: 5px;
+    }
 }
 @media(max-width: 500px){
     .headername{
@@ -305,128 +351,7 @@ footer{
         height: 220.5px;
         margin: 35px 0 35px 0;
     }
+.signup_button,.username{
+    font-size: 0.8em;
 }
-.log_in{
-    background-color: #FBF8E5;
-    display: none !important;
-}
-.login_block{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0 70px;
-}
-#login_img{
-    margin: 0 50px;
-}
-.message{
-    width: 220px;
-    height: 80px;
-    margin: 100px 0 0 0;
-    padding: 40px;
-    background-color: #FDF9ED;
-    border: dashed;
-    border-color: #5B1A04;
-    border-radius: 90px;
-    font-family: 'Advent Pro', cursive;
-    font-size: 1.2em;
-    color: #9B7260;
-    text-align: center;
-}
-.input_field{
-    margin: 50px;
-    width: 250px;
-    display: flex;
-    flex-direction: column;
-    
-}
-.personal_data{
-    width:auto;
-    margin: 16px;
-    border-radius: 16px;
-    border-color: #C19D46;
-    border-width: 0.8px;
-    font-family: 'Advent Pro', cursive;
-    background-color: #F9F8F7;
-
-}
-#done_icon{
-    margin: 0 200px;
-}
-.error{
-    width: 100%;
-    height: 100%;
-    background-color: #D8D2B0;
-    display: none !important;
-}
-#error_img{
-    margin: 40px 0 0 70px;
-    border-radius: 150px;
-}
-.error_block{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0 200px;
-}
-.return_button{
-    display: flex;
-    margin: 24px;
-    margin-bottom: 0;
-    border: none;
-    background-color: rgba(0, 0, 0, 0);
-    font-size: 2em;
-    font-family: 'Advent Pro', cursive;
-    color: #5B1A04;
-}
-#return_icon{
-    margin: 10px 0;
-}
-.return_button:hover{
-    color: #F9F8F7;
-}
-.return_button:active{
-    color: #F9F8F7;
-}
-.add{
-    display: flex;
-
-}
-.photo{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    width: 500px;
-    height: 350px;
-    margin: 100px 0 0 100px;
-    border: #5B1A04;
-    border: dashed;
-    border-radius: 45px;
-    background-color: #F9F8F7;
-}
-#add_date{
-    margin: 5px 0 0 40px;
-    font-family: 'Advent Pro', cursive;
-    font-size: 1.5em;
-    color: #7B5A19;  
-}
-#add_name{
-    margin: 5px 0 0 40px;
-    font-family: 'Advent Pro', cursive;
-    font-size: 1.5em;
-    color: #7B5A19;  
-}
-.description_block{
-    display: flex;
-    flex-direction: column;
-    margin: 100px 0 0 50px;
-}
-.add_input{
-    margin: 5px 0 5px 50px;
-    width: 250px;
-    height: 150px;
-    border: #C19D47;
-    border: dashed;
-    border-radius: 45px;
-    background-color: #F9F8F7;
 }
