--- a/styles.css
+++ b/styles.css
@@ -108,10 +108,14 @@ main{
     min-height: 100%;
     padding-bottom: 128px;
 }
-
+.search_block{
+    display: flex;
+}
 .search{
-    width: auto;
+    width: 200px;
+    height: 20px;
     margin: 16px;
+    padding: 5px;
     border-radius: 16px;
     border-color: #5B1A04;
     border-width: 0.8px;
@@ -119,10 +123,21 @@ main{
     color: #5B1A04;
     background-color: #F9F8F7;
 }
+.filter_button{
+    padding: 0;
+    border: none;
+    background-color: rgba(0, 0, 0, 0);
+    color: #5B1A04;
+    cursor: pointer;
+}
+.filter_button:hover{
+     color: #FEC63D;
+}
+
 ::-webkit-input-placeholder { 
      color: #5B1A04;
   }
-  @media(max-width: 600px){
+  @media(max-width: 700px){
     .search{
         width: 100px;
         margin: 16px 5px 5px 16px;
@@ -137,9 +152,9 @@ main{
         font-size: 0.6em;
     }
 }
-  @media(max-width: 340px){
+  @media(max-width: 360px){
     .search{
-        width: 80px;
+        width: 70px;
         margin: 16px 5px 5px 16px;
         font-size: 0.6em;
     }
@@ -169,7 +184,7 @@ main{
     justify-content: flex-start;
     align-items: center;
     width: 500px;
-    height: 350px;
+    height: 370px;
     border: 2px dashed  #5B1A04;
     border-radius: 45px;
     margin: 45px;
@@ -312,7 +327,7 @@ footer{
 @media(max-width: 600px){
     .photopost{
         width: 315px;
-        height: 220.5px;
+        height: 235px;
         margin: 35px;
     }
     .material-icons.md-36 { font-size: 20px; }
