--- a/styles.css
+++ b/styles.css
@@ -124,10 +124,10 @@ main{
     padding-bottom: 128px;
 }
 .delete_box{
-    display: none;
-    position: fixed;
     align-self: center;
     top: 40%;
+    left: 50%;
+    right: 50%;
     width: 200px;
     padding: 50px;
     background-color: #FDF9ED;
@@ -138,6 +138,23 @@ main{
     color: #9B7260;
     text-align: center;
     
+}
+
+.popup{
+    width:100%;
+    height: 100%;
+    top: 0px;
+    background-color: rgba(0,0,0,0.5);
+    overflow:hidden;
+    position:fixed;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+
+.confirm_button{
+    margin: 10px;
+    margin-bottom: 0px;
 }
 .search_block{
     display: flex;
